@@ -1,6 +1,10 @@
 # This file documents the revision history for Perl extension Catalyst.
 
 5.8000_05
+        - Passing request method exported by Catalyst::Test an extra
+          parameter used to be ignored, but started breaking if the parameter
+          was not a hash in 5.8000_04. Extra parameter is now ignored if
+          it isn't a hashref (t0m)
         - Fix request argumentss getting corrupted if you override the 
           dispatcher and call an action which detaches (for 
           Catalyst::Plugin::Authorization::ACL) (t0m)
